docroot/profiles/drupal_commons/themes/commons_environs/css/styles.css
/* ... */
.not-front.og-context .content-content, .page-groups .content-content, .not-front.og-context #content-top-inner, .page-groups #content-top-inner {
  border: 2px solid #8ac559;
  overflow: hidden;
}

/*groups page leave/join button style*/
.not-front .views-field-field-group-image-fid {
	float: left;
	margin-right: 10px;
}

.not-front .views-field-description { 
	float: left;
}

.not-front .views-field-leave-group, .not-front .views-field-subscribe {
	/*position: absolute;
	top: 25px;
	right: 15px;*/
	float: right;
	margin: 0 10px 0 0;
	padding: 0;	
}
/*end groups page leave/join button style*/


/*blog posts create blog entry pod*/
#edit-node-type-wrapper {
	float: left;
}

#edit-submit {
	margin: 5px 0 0 10px;
}

.not-front .views-field-picture {
	float: left;
	margin-right: 10px;
}
/*end blog posts create blog entry pod*/

.not-front.og-context #content-tabs {
  margin: 2px 0 0 0;
}

.not-front.og-context #primary-menu {
  margin: 19px 0 0 0;
}

/*.not-front.og-context .primary-menu-inner ul.sf-menu li.active-trail a {
  padding: 0;
}

.not-front.og-context .primary-menu-inner ul.sf-menu li.active-trail a span {
  background-color: #fff;
  margin: 0 5px 0 4px;
  display: block;
  padding: 0 8px 6px 8px;
  border-radius: 9px 9px 0 0;
  -webkit-border-radius: 9px 9px 0 0;
  -moz-border-radius: 9px 9px 0 0;
}*/

.not-front.og-context #content-tabs ul.primary, .not-front.og-context #content-tabs ul.primary {
  background: #fff;
  padding: 10px;
  width: auto;
  border-radius: 9px;
  -webkit-border-radius: 9px;
  -moz-border-radius: 9px;
  margin-bottom: 1em;
}

.not-front.og-context #content-tabs ul.primary li, .not-front.og-context #content-tabs ul.primary li {
  margin:0 5px;
}

.not-front.og-context #content-tabs ul.primary li a:link, .not-front.og-context #content-tabs ul.primary li a:visited {
  background: none;
  border: none;
  font-size: 12px;
  color: #736357;
  margin: 0;
  padding: 5px;
}

.not-front.og-context #content-tabs ul.primary li a:hover {
  color:#8ac559;
}

.not-front.og-context #content-tabs ul.primary li a.active:link, .not-front.og-context #content-tabs ul.primary li a.active:visited {
  color: #fff;
  background: #8ac559;
  border-radius: 6px;
  -webkit-border-radius: 6px;
  -moz-border-radius: 6px;
}

.not-front.og-context .sidebar-last .block .inner, .not-front.og-context .sidebar-first .block .inner, .page-groups .sidebar-last .block .inner, .page-groups .sidebar-first .block .inner {
  background: #fff url(../images/bg-box-green.png) 0px 0px no-repeat;
}

.not-front.og-context form input.form-submit, .not-front.og-context .views-exposed-form .views-exposed-widget input.form-submit, .page-groups form input.form-submit, .page-groups .views-exposed-form .views-exposed-widget input.form-submit {
  background: #8bc558;
  -moz-box-shadow: inset -2px -2px 0px 1px #008f4e;
  -webkit-box-shadow: inset -2px -2px 0px 1px #008f4e;
  box-shadow: inset -2px -2px 0px 1px #008f4e;
}

.not-front.og-context .primary-menu-inner ul.sf-menu > li.active-trail > a,
.not-front.og-context .primary-menu-inner ul.sf-menu > li.active-trail > a:visited,
.page-groups .primary-menu-inner ul.sf-menu > li.active-trail > a,
.page-groups .primary-menu-inner ul.sf-menu > li.active-trail > a:visited {
  color: #8ac559;
}

#footer {
}

#acquia-footer-message {
  float: left;
}

#acquia-footer-message a img {
  display: block;
  float: left;
}

#acquia-footer-message span {
  display: block;
  float: left;
  margin: 10px 10px 0;
}

#fusion-footer-message {
  float: right;
  margin-top: 10px;
}

ul.links.inline {
  display: block;
  overflow: hidden;
  margin-top: 0.25em;
}

ul.links.inline li {
  display: block;
  float: left;
  padding: 0 0.25em 0 0;
}

ul.links.inline li + li {
  border-left: 1px solid #8AC559;
  padding-left: 0.25em;
}

ul.links.inline li a {
  padding: 2px 4px;
}

ul.links.inline a:hover,
ul.links.inline a:focus,
ul.links.inline a:active {
  color: #fff;
  background-color: #29ABE2;
  text-decoration: none;
}

.comment-info .picture {
  float: left;
  margin: 0.25em 0.5em 0 0;
}

.comment-info .comment-name {
  display: block;
}

.comment-content-wrapper {
  clear: left;
}

.feed-item + .feed-item {
  margin-top: 3em;
}

